[metadata]
name = methodtools
version = 0.4.7
url = https://github.com/youknowone/methodtools
author = Jeong YunWon
author_email = methodtools@youknowone.org
license = BSD 2-Clause License
license_file = LICENSE
description = Expand standard functools to methods
long_description = file: README.rst
keywords = ring,functools,lru_cache,method
classifier =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
[options]
py_modules = methodtools
install_requires =
    wirerope>=0.4.7
[options.extras_require]
test =
    functools32>=3.2.3-2;python_version<"3"
    pytest>=4.6.7
    pytest-cov>=2.6.1
doc =
    sphinx

[aliases]
test=pytest
[tool:pytest]
addopts=--verbose --cov-config .coveragerc --cov methodtools
python_files = tests/test*.py
norecursedirs=.git py ci
